a11y: fix color contrast, sizing and text for screen reader

--- a/apps/www/src/app/docs/neotoc.css
+++ b/apps/www/src/app/docs/neotoc.css
@@ -90,12 +90,12 @@ Syntax of heading comments:
   ); /* Here these CSS vars are coming from outside. */
   --header-height: 3rem;
   --relative-font-size: 100; /* do not use percentage sign */
-  --toggle-fold-btn-width: 1.4em; /* should in em unit */
+  --toggle-fold-btn-width: 1.7em; /* should in em unit */
   --indent-line-gap: 5px; /* should be in px unit */
   --indent-line-width: 1px;
-  --anchor-padding-block: 0.3em;
+  --anchor-padding-block: 0.4em;
   --anchor-padding-inline: 0.3em;
-  --anchor-border-radius: 10px;
+  --anchor-border-radius: 6px;
   --padding-left: 1.5rem;
   --light-bar-width: 1px;
   --light-bar-tip-radius: 2.5px;
